[package]
name = "hopin-live-test-consumer"
version = "0.1.0"
authors = ["Purple Hair Rust Bard <AshantiMutinta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full","sync"] }
rdkafka = { version = "0.24", features = ["cmake-build"] }
futures = "0.3.5"
